sumo/tests/traci/ChangeTLValue/errors/UnsupportedVariable/testclient.prog
simstep 48 1
setvalue 0xc2 0xff dummy <string> dummy
simstep 49 1
